# hwtester

./: .gitignore  CLAUDE.md  REFERENCE.md  SKILL.md  config.example.toml  pyproject.toml
examples/: test_pairing.toml
hwtester/: __init__.py  __main__.py  cli.py  config.py  dut_logger.py  interactive.py  relay.py  sequence.py  utils.py
